--- a/css/css-demo/practice.css
+++ b/css/css-demo/practice.css
@@ -1,3 +1,14 @@
-#contact-info section{
-	font-size:2em;
+section#contact-info{
+	font-size:.8em;
+}
+
+section.job{
+	background-color:#e9e5dc;
+	border-radius: 0 25px 0 25px;
+	padding:10px;
+	margin-bottom:10px;
+}
+
+ul.list{
+	font-size:.8em;
 }
