finished peer session code

--- a/css/responsive-design/style.css
+++ b/css/responsive-design/style.css
@@ -3,30 +3,57 @@ blockquote {
   padding: 15px;
   margin-left: 0px;
 }
-
 cite {
   display: block;
   margin-top: 10px;
 }
-
 #external-links ul {
   list-style-type: none;
   padding-left: 0px;
 }
-
 /* you're welcome to edit the
 image, figure, and figcaption CSS if you'd like, 
 but it's optional! */
 img {
   width: 100%;
 }
-
 figure {
   margin-left: 0px;
   margin-right: 0px;
 }
-
 figcaption {
   font-style: italic;
   text-align: right;
+}
+body{
+  max-width: 960px;
+  
+}
+main{
+  width: 75%;
+  display: inline-block;
+  vertical-align: top;
+}
+section#external-links{
+  display: inline-block;
+  vertical-align: top;
+  width: 20%;
+}
+
+@media screen and (max-width: 990px) {
+  main {
+   width:100%;
+   border-top: 2px purple solid;
+
+  }
+  section#external-links{
+    width:100%;
+  }
+}
+@media screen and (min-width: 991px) {
+  main{
+    border-left:2px purple solid;
+    padding-left:2px;
+  }
+  
 }
